# SpotifyToVKStatus

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  config.py  logger.py
