[tool.poetry]
name = "spotifyToVKStatus"
version = "0.1.0"
description = ""
authors = ["Ivan <pass@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
VKLight = "^1.3.1"
spotipy = "^2.15.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
